tests/errors/test_invalid_type_annotation.mob
// Test that invalid type annotations produce parse errors
// This test is expected to fail (parse error)
func bad(x: badtype) {
    return x
}
